Fixed issue where upload image was malfunctioning on mobile

--- a/src/Hooli/wwwroot/css/site.css
+++ b/src/Hooli/wwwroot/css/site.css
@@ -522,7 +522,7 @@ form input[type=radio] {
 }
 
 .slider.open {
-	max-height: 700px; /* approximate max height */
+	max-height: 800px; /* approximate max height */
 
 	transition-property: all;
 	transition-duration: .5s;
